# gen-ai

./: .pre-commit-config.yaml  Makefile  README  hrgris.py  pyproject.toml  settings.json
.github/workflows/: ci.yml
src/: print.py
src/prompts/: system_prompt.py
src/qdrant/: data_preprocessor.py  pdf_loader.py  qdrant_collection.py
src/rag/: retriever.py  settings.py  utils.py
